.build.yml: Add texlive package

--- a/.build.yml
+++ b/.build.yml
@@ -4,6 +4,7 @@ packages:
   - elpa-htmlize
   - rsync
   - texinfo
+  - texlive
 sources:
   - https://git.sr.ht/~bzg/orgweb
   - https://git.savannah.gnu.org/git/emacs/org-mode.git
