--- a/.build.yml
+++ b/.build.yml
@@ -12,14 +12,14 @@ secrets:
   - 7a38e4c8-2b08-446e-a478-2a114a50db86
 tasks:
   - install: |
-      cd ../org-mode
+      cd org-mode
       git checkout bugfix
       cat mk/default.mk > local.mk
       cat mk/server.mk >> local.mk
       mkdir -p upload/guide upload/manual
       make autoloads
       make doc-up
-      cd orgweb
+      cd ../orgweb
       ./publish.sh
   - upload: |
       rsync -e "ssh -o StrictHostKeyChecking=no" -av orgweb/* bzg.fr:/home/build/orgmode/
